force-app/main/default/objects/SCOC__FraudIdIssuedList__c/SCOC__FraudIdIssuedList__c.object-meta.xml
<CustomObject>
    <description>Response Entity Fraud List Identification Issued</description>
    <label>Fraud Identification Issued</label>
    <nameField>
        <displayFormat>FSIL-{00000}</displayFormat>
        <label>Fraud Identification Issued Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fraud Ids Issued</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>