force-app/main/default/objects/SCOC__FraudIdIssuedList__c/fields/SCOC__FirstPossibleYear__c.field-meta.xml
<CustomField>
    <fullName>SCOC__FirstPossibleYear__c</fullName>
    <description>First year possible for Identification issuance</description>
    <label>First Possible Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>