force-app/main/default/objects/SCOC__FraudIdIssuedList__c/fields/SCOC__FraudList__c.field-meta.xml
<CustomField>
    <fullName>SCOC__FraudList__c</fullName>
    <description>This required master-detail field contains the lookup key to the associated Fraud List item.</description>
    <label>Fraud List</label>
    <referenceTo>SCOC__FraudList__c</referenceTo>
    <relationshipLabel>Fraud Identification Issued</relationshipLabel>
    <relationshipName>FraudIdIssuedList</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>