force-app/main/default/objects/SCOC__FraudIdIssuedList__c/fields/SCOC__LastPossibleYear__c.field-meta.xml
<CustomField>
    <fullName>SCOC__LastPossibleYear__c</fullName>
    <description>Last year possible for Identification issuance</description>
    <label>Last Possible Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>